SERVER-26904 correctly parse socketTimeoutMS as ms