src/mongo/client/mongo_uri_connect.cpp
@@ -165,19 +165,19 @@ BSONObj MongoURI::_makeAuthObjFromOptions(int maxWireVersion) const {
 }
 
 DBClientBase* MongoURI::connect(StringData applicationName, std::string& errmsg) const {
-    double socketTimeout = 0.0;
+    double socketTimeoutSecs = 0.0;
 
     OptionsMap::const_iterator it = _options.find("socketTimeoutMS");
     if (it != _options.end()) {
         try {
-            socketTimeout = std::stod(it->second);
+            socketTimeoutSecs = std::stod(it->second) / 1000;
         } catch (const std::exception& e) {
             uasserted(ErrorCodes::BadValue,
                       str::stream() << "Unable to parse socketTimeoutMS value" << causedBy(e));
         }
     }
 
-    auto ret = _connectString.connect(applicationName, errmsg, socketTimeout, this);
+    auto ret = _connectString.connect(applicationName, errmsg, socketTimeoutSecs, this);
     if (!ret) {
         return ret;
     }
